# roodox-sever-win

./: .gitignore  OPEN_SOURCE_SPLIT.md  OPERATIONS.md  PRIVACY_AUDIT.md  QA.md  README.md  SECURITY.md  go.mod  go.sum  roodox.config.example.json
client/: roodox_client.go
cmd/roodox_client_import/: main.go  main_test.go
cmd/roodox_qa/: main.go
cmd/roodox_server/: main.go  service_mode_other.go  service_mode_windows.go
cmd/testclient/: main.go
docs/: CLIENT_INTEGRATION_REPORT.md  OPEN_SOURCE_SPLIT.md  OPERATIONS.md  PRIVACY_AUDIT.md  QA.md  README.md  USER_INSTALL.md
docs/encyclopedia/: 01-architecture-and-boundaries.md  02-privacy-and-security-guide.md  03-config-and-env-reference.md  04-grpc-api-reference.md  05-local-commands-and-admin-interfaces.md  06-script-reference.md  07-runtime-storage-and-sensitive-files.md  08-source-map.md  09-client-integration-and-handoff.md  10-maintenance-playbooks-and-change-checklist.md  README.md
internal/accessbundle/: bundle.go  bundle_test.go
internal/analyze/: analyzer.go  analyzer_test.go
internal/appconfig/: config.go  config_test.go
internal/cleanup/: runner.go  runner_test.go
internal/conflict/: conflict.go
internal/db/: db.go  db_test.go  device_registry.go  device_registry_admin.go  meta.go  migrations.go  (+6 more)
proto/: roodox_core.pb.go  roodox_core.proto  roodox_core_grpc.pb.go
workbench/: index.html  package-lock.json  package.json  tauri-schema.json
workbench/src-tauri/: Cargo.toml  tauri.conf.json
workbench/src-tauri/icons/: icon.icns
workbench/src-tauri/src/: config.rs  main.rs  models.rs
(+104 files in other folders)
